--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,16 @@
-name: Deploy website on push
-
-on:
-  push:
-    branches:
-      - main 
+on: push
+name: 🚀 Deploy website on push
 jobs:
   web-deploy:
-    name: Deploy
-    runs-on: ubuntu-latest 
-      steps: 
-      - name: Get latest code
-      uses: actions/checkout@v2
-      - name: Sync files
-      uses: Samkirkland/FTP-Deploy-Action@4.1.0
+    name: 🎉 Deploy
+    runs-on: ubuntu-latest
+    steps:
+    - name: 🚚 Get latest code
+      uses: actions/checkout@v3
+    
+    - name: 📂 Sync files
+      uses: SamKirkland/FTP-Deploy-Action@4.3.3
       with:
-      server: ftp.dreamer.com.ng
-      username: ${{secrets.USERNAME}}
-      password: ${{secrets.PASSWORD}}
-      server-dir: /
+        server: ftp.dreamer.com.ng
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
